# pdf-notes-extractor

./: .coverage  .gitignore  README.md  extract_pdf_annotations.py  pyproject.toml  setup.sh
tests/: conftest.py  test_exporters.py  test_extract.py  test_helpers.py
